// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ObjectProperty /> renders maxProperties 1`] = `
<span>
  <span
    className="object-constraints"
  >
    at most 10 properties
  </span>
</span>
`;

exports[`<ObjectProperty /> renders minProperties 1`] = `
<span>
  <span
    className="object-constraints"
  >
    at least 2 properties
  </span>
</span>
`;

exports[`<ObjectProperty /> renders minProperties and maxProperties 1`] = `
<span>
  <span
    className="object-constraints"
  >
    4-10 properties
  </span>
</span>
`;

exports[`<ObjectProperty /> renders minProperties and maxProperties when they are the same value 1`] = `
<span>
  <span
    className="object-constraints"
  >
    4 properties
  </span>
</span>
`;
